--- a/docs/modelldokumentation/allgemeines.adoc
+++ b/docs/modelldokumentation/allgemeines.adoc
@@ -9,11 +9,7 @@ Am 1. Januar 2013 trat die https://www.sz.ch/public/upload/assets/5600/214_111.p
 ===  Zweck des Dokuments
 Dieses Dokument beschreibt den Geobasisdatensatz
  
-* *__<Name des Datensatzes>__.* +
-
-__<weitere Beschreibungen>__ +
-
-Der Geobasisdatensatz ist Bestandteil des ÖREB-Katasters. +
+* *Richtplan, kantonal* +
 
 Diese Dokumentation richtet sich an alle Personen, welche sich über dieses Thema informieren möchten.
 
