--- a/docs/modelldokumentation/modelldokumentation.adoc
+++ b/docs/modelldokumentation/modelldokumentation.adoc
@@ -43,4 +43,5 @@ include::./allgemeines.adoc[]
 include::./modellbeschreibung.adoc[]
 include::./diagramme.adoc[]
 include::./klassenbeschreibung.adoc[]
+include::./modelltransformation.adoc[]
 endif::[]
