--- a/docs/modelldokumentation/modelltransformation.adoc
+++ b/docs/modelldokumentation/modelltransformation.adoc
@@ -1,25 +1,133 @@
 == Modelltransformationen
 === Transformation ins minimale Geodatenmodell des Bundes
-Zielmodell: Waldgrenzen_V1_2 (Version: 2023-03-20) http://models.geo.admin.ch/BAFU/Waldgrenzen_V1_2.ili
+Zielmodell: Richtplaene_V1 (Version: 2022-07-01) http://models.geo.admin.ch/ARE/Richtplaene_V1.ili
 
-=== Transformation ins Transfermodell des ÖREB-Katasters
-Zielmodell: todo
+Die nachfolgenden Tabellen orientieren sich an den Klassen gemäss Bundesmodell. Das "Zielattribut" ist das Attribut gemäss Bundesmodell. Das "Quellattribut" ist das Attribut des kantonalen Modells.
 
-[cols="1,1,3"]
-|=======
-h| Code h| Abkürzung h| Bezeichnung
-| 61.1.1 | rGP | Gestaltungsplan "Dörfli"
-| 61.1.2 | rGP | Gestaltungsplan "Freihof"
-| ... | ... | ...
-| 61.1.11 | rGP | Gestaltungsplan "Freihof West"
-|=======
-
-[cols=2*,options="header",cols="25,75"]
+==== Klasse `+Karte+`
+[cols=2*,options="header"]
 |===
-| heading column 1
-| heading column 2
-| row 1 column 1 | row 1 column 2
-| row 2 column 1 | row 2 column 2
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+m| Karte.Code
+m| Code
+m| Karte.Titel
+m| Titel
+| `+Stammdaten.Kartentyp.OID+` +
+hergeleitet über `+Karte.rKartentyp+` 
+m| Kartentyp
+m| Karte.Massstabszahl_Druck
+m| Massstabszahl_Druck
+m| Karte.Massstabszahl_Basiskarte
+m| Massstabszahl_Basiskarte
+m| Karte.Bemerkung
+m| Bemerkung
+|===
+
+==== Klasse `+Objekt+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+m| Objektgruppe.Code
+m| Code
+m| Objektgruppe.Originalbezeichnung
+m| Originalbezeichnung
+m| Objektgruppe.Abkuerzung
+m| Abkuerzung
+m| Objektgruppe.Kapitel
+m| Kapitel
+| `+Stammdaten.Thema.OID+` +
+hergeleitet über `+Objektgruppe.rThema+` 
+m| Thema
+| `+Stammdaten.Koordinationsstand.OID+` +
+hergeleitet über `+Objekt.rKoordinationsstand+`
+m| Koordinationsstand
+| `+Stammdaten.Objekttyp.OID+` +
+hergeleitet über `+Objekt.rObjekttyp+`
+m| Objekttyp
+m| Objekt.Beschlussdatum
+m| Datum_Beschluss
+m| Objekt.Massstabszahl_Erfassung
+m| Massstabszahl_Erfassung
+| fix: "SZ"
+m| Kanton
+m| Objektgruppe.Weblink
+m| Weblink
+m| Objekt.Bemerkung
+m| Bemerkung
+|===
+
+==== Klasse `+Punkt+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+| `+Punktgeometrie.Geometrie+` +
+hergeleitet über `+Punktgeometrie.rPunktelement+`
+m| Geometrie
+|===
+
+==== Klasse `+Linie+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+| `+Liniengeometrie.Geometrie+` +
+hergeleitet über `+Liniengeometrie.rLinienelement+`
+m| Geometrie
+|===
+
+==== Klasse `+Flaeche+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+| `+Flaechengeometrie.Geometrie+` +
+hergeleitet über `+Flaechengeometrie.rFlaechenelement+`
+m| Geometrie
+|===
+
+==== Klasse `+Amt+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+| fix: "Amt für Raumentwicklung" (Sprache: "de")
+m| Name
+| fix: "https://www.sz.ch/are" (Sprache: "de")
+m| AmtImWeb
+| fix: <NULL>, weil unbekannt
+m| UID
+|===
+
+==== Klasse `+Datenbestand+`
+[cols=2*,options="header"]
+|===
+| Quellattribut +
+(Kantonsmodell)
+| Zielattribut +
+(Bundesmodell)
+| fix: "ch.sz.a084a.geobasisdaten"
+m| BasketID
+m| Datenbestand.Stand
+m| Stand
+| Datum, an dem die Daten ins Bundesmodell überführt wurden
+m| Lieferdatum
+m| Datenbestand.Bemerkung
+m| Bemerkung
 |===
 
 ifdef::backend-pdf[]
