--- a/data/readme.adoc
+++ b/data/readme.adoc
@@ -1,4 +1,10 @@
 = Dateibeschreibung
 
-* *Stammdaten_2024-06-06.xtf:* Diese Datei enthält die Stammdaten, welche für die publizierten Daten gelten. Die Datei wurde am 6. Juni 2024 erstellt.
-* *Stammdaten_2025-01-17.xtf:* Diese Datei enthält die Stammdaten, welche aktuell gültig sind. Unterschied zur Vorversion: Der Wert für die BID folgt neu dem Standard.
+[cols=*,options="header"]
+|===
+| Dateiname | Beschreibung
+| *Stammdaten_2024-06-06.xtf*
+| Diese Datei enthält die Stammdaten, welche für die publizierten Daten gelten. Die Datei wurde am 6. Juni 2024 erstellt.
+| *Stammdaten_2025-01-17.xtf*
+| Diese Datei enthält die Stammdaten, welche aktuell gültig sind. Unterschied zur Vorversion: Der Wert für die BID folgt neu dem Standard.
+|===
